--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints">
 
-                <ImageButton
+                <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/EichelSpiel"
                     android:layout_width="match_parent"
                     android:layout_height="67dp"
@@ -100,8 +100,10 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginStart="0dp"
                     android:layout_marginEnd="0dp"
+                    android:contentDescription="@string/app_name"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/eichel_dark" />
+                    android:background="#848484"
+                    android:src="@drawable/eichel_dark"></androidx.constraintlayout.utils.widget.ImageFilterButton>
         </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
