--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/relativeLayout2"
             android:layout_width="0dp"
             android:layout_height="152dp"
             android:layout_marginTop="32dp"
@@ -95,11 +96,9 @@
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/EichelSpiel"
                     android:layout_width="match_parent"
-                    android:layout_height="67dp"
+                    android:layout_height="40dp"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
                     android:layout_marginStart="1dp"
-                    android:layout_marginEnd="-1dp"
                     android:background="#848484"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitCenter"
@@ -108,7 +107,7 @@
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/BlattSpiel"
                     android:layout_width="match_parent"
-                    android:layout_height="67dp"
+                    android:layout_height="40dp"
                     android:layout_below="@+id/EichelSpiel"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
@@ -122,14 +121,14 @@
 
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/HerzSpiel"
-                    android:layout_width="match_parent"
-                    android:layout_height="67dp"
+                    android:layout_width="144dp"
+                    android:layout_height="40dp"
                     android:layout_below="@+id/BlattSpiel"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_marginStart="1dp"
                     android:layout_marginTop="18dp"
-                    android:layout_marginEnd="1dp"
+                    android:layout_marginEnd="0dp"
                     android:background="#848484"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitCenter"
@@ -137,8 +136,8 @@
 
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/SchellSpiel"
-                    android:layout_width="match_parent"
-                    android:layout_height="67dp"
+                    android:layout_width="144dp"
+                    android:layout_height="40dp"
                     android:layout_below="@+id/HerzSpiel"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
@@ -149,6 +148,89 @@
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitCenter"
                     android:src="@drawable/schell_dark"></androidx.constraintlayout.utils.widget.ImageFilterButton>
+
+                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                    android:id="@+id/GrandeSpiel"
+                    android:layout_width="144dp"
+                    android:layout_height="40dp"
+                    android:layout_below="@+id/SchellSpiel"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="0dp"
+                    android:background="#848484"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/grand_dunkel"></androidx.constraintlayout.utils.widget.ImageFilterButton>
+
+                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                    android:id="@+id/NullSpiel"
+                    android:layout_width="144dp"
+                    android:layout_height="40dp"
+                    android:layout_below="@+id/GrandeSpiel"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="0dp"
+                    android:background="#848484"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/null_dunkel"></androidx.constraintlayout.utils.widget.ImageFilterButton>
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/ansage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:text="Ansage:"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="239dp"
+            app:layout_constraintBottom_toTopOf="@+id/ReizView"
+            app:layout_constraintTop_toBottomOf="@+id/ansage"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="59dp">
+
+                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                    android:id="@+id/NullSpiel"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_below="@+id/GrandeSpiel"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="295dp"
+                    android:background="#848484"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/null_dunkel"></androidx.constraintlayout.utils.widget.ImageFilterButton>
+
+                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                    android:id="@+id/NullSpiel"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_below="@+id/GrandeSpiel"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="131dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="140dp"
+                    android:background="#848484"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/null_dunkel"></androidx.constraintlayout.utils.widget.ImageFilterButton>
+
+
         </RelativeLayout>
 
         <TextView
@@ -162,5 +244,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
