--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -247,8 +247,8 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="408dp"
-            android:layout_height="39dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginTop="28dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -257,27 +257,25 @@
 
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/SchneiderAnsage"
-                    android:layout_width="116dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginEnd="292dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="295dp"
                     android:background="#848484"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/schneider_ansage_dunkel"
-                    tools:layout_editor_absoluteX="30dp"
-                    tools:layout_editor_absoluteY="444dp"></androidx.constraintlayout.utils.widget.ImageFilterButton>
+                    android:src="@drawable/schneider_ansage_dunkel"></androidx.constraintlayout.utils.widget.ImageFilterButton>
 
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/SchwarzAnsage"
-                    android:layout_width="141dp"
-                    android:layout_height="match_parent"
-
-
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
                     android:layout_alignParentStart="true"
-                    android:layout_marginStart="132dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="136dp"
+                    android:layout_marginEnd="135dp"
                     android:background="#848484"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitCenter"
@@ -285,12 +283,12 @@
 
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/AnsageAnsage"
-                    android:layout_width="123dp"
-                    android:layout_height="match_parent"
-
-
+                    android:layout_width="wrap_content"
+                    android:layout_height="38dp"
+                    android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="0dp"
+                    android:layout_marginStart="290dp"
+                    android:layout_marginEnd="1dp"
                     android:background="#848484"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitCenter"
