--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -232,25 +232,16 @@
                 <androidx.constraintlayout.utils.widget.ImageFilterButton
                     android:id="@+id/AnsageAnsage"
                     android:layout_width="wrap_content"
-                    android:layout_height="38dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_marginStart="293dp"
-                    android:layout_marginEnd="-2dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="5dp"
                     android:background="#848484"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ansage_angesagt_dunkel"></androidx.constraintlayout.utils.widget.ImageFilterButton>
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="28dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">
 
 
         </RelativeLayout>
